--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>موقعي التجريبي</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NEON.h8x</title>
+    <link rel="stylesheet" href="NEON.css">
 </head>
-<body style="text-align: center; padding: 50px; font-family: sans-serif;">
-  <h1 style="color: hotpink;">أهلاً بيك في موقعي!</h1>
-  <p>الموقع ده معمول بـ Front-End بس وبتستعرضه من GitHub Pages.</p>
+<body>
+    <div id="app">
+    <svg viewBox="0 0 200 200" class="neon-heart">
+        <path  d="M100,180 
+                 C20,100 20,40 100,80 
+                 C180,40 180,100 100,180" 
+              fill="none" 
+              stroke="#ff0000" 
+              stroke-width="4" 
+              stroke-linecap="round" 
+              stroke-linejoin="round" />
+    </svg>
+    <div class="p">
+        FARAH
+      </div>
+  </div>
 </body>
+
 </html>
